--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Focus Academy · Matemàtiques</title>
   <meta name="description" content="Pràctiques de matemàtiques tipus ThatQuiz per a estudiants. Single-file, sense dependències." />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -152,11 +153,11 @@
 
     <footer class="wrap" style="display:flex; align-items:center; justify-content:space-between; gap:16px">
       <div>Fet amb ❤️ per Focus Academy · © <span id="year"></span></div>
-      <img src="https://static.wixstatic.com/media/543803_e8b22e64a34945f9ba54d4ca39fa3645~mv2.png/v1/crop/x_836,y_591,w_1877,h_1328/fill/w_642,h_454,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/LOGOblanco.png"
+      <img src="https://static.wixstatic.com/media/543803_e8b22e64a34945f9ba54d4ca39fa3645~mv2.png/v1/crop/x_836,y_591,w_1877,h_1328/fill/w_642,h_454,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/543803_e8b22e64a34945f9ba54d4ca39fa3645~mv2.png"
            alt="Logo Focus Academy" style="height:40px; width:auto; object-fit:contain"
            referrerpolicy="no-referrer" />
     </footer>
   </main>
+  <script src="main.js" defer></script>
 </body>
 </html>
-```
