--- a/teoria.html
+++ b/teoria.html
@@ -213,6 +213,7 @@
       </div>
 
       <div class="top-actions">
+        <button class="btn" onclick="window.location.href='index.html'">Torna a l'inici</button>
         <div class="searchbar" role="search" aria-label="Cerca global">
           <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none">
             <path d="M21 21l-4.2-4.2M10.8 18.6a7.8 7.8 0 1 1 0-15.6 7.8 7.8 0 0 1 0 15.6z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"/>
