--- a/index.html
+++ b/index.html
@@ -5,144 +5,165 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Focus Academy · Matemàtiques</title>
   <meta name="description" content="Pràctiques de matemàtiques tipus ThatQuiz per a estudiants. Single-file, sense dependències." />
+  <meta name="theme-color" content="#7aa2ff" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <noscript>
+    <div style="background:#fee2e2;color:#7f1d1d;padding:10px 16px;text-align:center;border-bottom:1px solid #fecaca">
+      Aquesta aplicació necessita JavaScript per funcionar correctament.
+    </div>
+  </noscript>
+
   <header>
-    <div class="wrap row">
-      <div class="brand">
-        <div class="logo" aria-hidden="true">Q</div>
-        <h1>Focus Academy · Matemàtiques</h1>
+    <div class="wrap row" role="navigation" aria-label="Navegació principal">
+      <div class="brand" aria-label="Identitat del lloc">
+        <div class="logo" aria-hidden="true" title="Focus Academy">Q</div>
+        <h1 style="white-space:nowrap">Focus Academy · Matemàtiques</h1>
       </div>
-      <nav class="right">
-        <button class="pill" onclick="showView('home')">Inici</button>
-        <button class="pill" onclick="showView('results')">Resultats</button>
-        <button class="pill" onclick="showView('about')">Sobre</button>
-        <button class="pill" onclick="window.location.href='teoria.html'">Teoria</button>
-        <input id="studentName" class="input" placeholder="Nom de l'alumne/a" />
+
+      <nav class="right" aria-label="Vistes">
+        <button class="pill" onclick="showView('home')" aria-label="Anar a Inici">Inici</button>
+        <button class="pill" onclick="showView('results')" aria-label="Anar a Resultats">Resultats</button>
+        <button class="pill" onclick="showView('about')" aria-label="Anar a Sobre">Sobre</button>
+        <button class="pill" onclick="window.location.href='teoria.html'" aria-label="Obrir Teoria">Teoria</button>
+        <input id="studentName" class="input" placeholder="Nom de l'alumne/a" aria-label="Nom de l'alumne o alumna" />
       </nav>
     </div>
   </header>
 
   <main class="wrap">
     <!-- HOME -->
-    <section id="view-home" class="hero">
-      <div class="panel card">
-        <h2 class="title">Benvingut/da! 👋</h2>
+    <section id="view-home" class="hero" aria-labelledby="home-title">
+      <div class="panel card fade-in">
+        <h2 class="title" id="home-title">Benvingut/da! 👋</h2>
         <p class="subtitle">Tria un mòdul per configurar-lo i començar. Tot queda guardat en aquest dispositiu (sense comptes).</p>
 
         <div class="section-title">Mòduls de matemàtiques</div>
-        <div class="grid" id="moduleGrid"></div>
+        <div class="grid" id="moduleGrid" aria-live="polite"></div>
       </div>
     </section>
 
     <!-- CONFIG -->
-    <section id="view-config" class="hidden">
-      <div class="panel card">
+    <section id="view-config" class="hidden" aria-labelledby="cfg-title">
+      <div class="panel card fade-in">
         <div class="row" style="align-items:center">
           <div>
             <h2 class="title" id="cfg-title" style="margin:0">Configura el mòdul</h2>
             <p class="subtitle" id="cfg-desc"></p>
           </div>
-        <div class="controls">
-            <button class="btn-secondary" onclick="showView('home')">← Torna</button>
-            <button onclick="startFromConfig()">Comença</button>
+          <div class="controls" role="group" aria-label="Accions de configuració">
+            <button class="btn-secondary" onclick="showView('home')" aria-label="Tornar a Inici">← Torna</button>
+            <button onclick="startFromConfig()" aria-label="Començar el qüestionari">Comença</button>
           </div>
         </div>
 
         <div class="section-title">Opcions comunes</div>
         <div class="controls">
-          <label class="field chip">Preguntes
-            <select id="cfg-count">
+          <label class="field chip" for="cfg-count">Preguntes
+            <select id="cfg-count" aria-label="Nombre de preguntes">
               <option>10</option><option>20</option><option>30</option><option>50</option>
             </select>
           </label>
-          <label class="field chip">Temps (min)
-            <select id="cfg-time">
+          <label class="field chip" for="cfg-time">Temps (min)
+            <select id="cfg-time" aria-label="Límit de temps en minuts">
               <option value="0">Sense límit</option><option>5</option><option>10</option><option>15</option><option>20</option>
             </select>
           </label>
-          <label class="field chip">Nivell (1–20)
-            <select id="cfg-level"></select>
+          <label class="field chip" for="cfg-level">Nivell (1–20)
+            <select id="cfg-level" aria-label="Nivell de dificultat"></select>
           </label>
         </div>
 
-        <div id="cfg-specific"></div>
+        <div id="cfg-specific" aria-live="polite"></div>
       </div>
     </section>
 
     <!-- QUIZ -->
-    <section id="view-quiz" class="hidden">
+    <section id="view-quiz" class="hidden" aria-labelledby="quiz-title">
       <div class="quiz">
-        <div class="panel card">
+        <!-- Columna pregunta -->
+        <div class="panel card fade-in">
           <div class="q-header">
             <div style="display:flex; align-items:center; gap:10px">
-              <span id="qModule" class="badge">Mòdul</span>
+              <span id="qModule" class="badge" aria-live="polite">Mòdul</span>
               <span id="qLevel" class="chip">Nivell 1</span>
-              <span id="timer" class="chip timer">--:--</span>
+              <span id="timer" class="chip timer" aria-live="polite">--:--</span>
             </div>
-            <div class="progress" style="flex:1"><i id="bar"></i></div>
+            <div class="progress" style="flex:1" data-anim="true" aria-label="Progrés"><i id="bar"></i></div>
           </div>
 
           <div class="q">
-            <div class="meta" id="qMeta">Pregunta 1 de 10</div>
-            <h2 id="qText">—</h2>
+            <div class="meta" id="qMeta" aria-live="polite">Pregunta 1 de 10</div>
+            <h2 id="qText" style="margin-top:2px">—</h2>
             <div id="qMedia" style="margin:4px 0 2px"></div>
+
             <div class="answer-row">
-              <input id="answer" class="input answer" placeholder="Resposta" inputmode="decimal" />
-              <button id="btnCheck">Comprova (↵)</button>
-              <button class="btn-secondary" id="btnSkip">Omet (→)</button>
+              <input id="answer" class="input answer" placeholder="Resposta" inputmode="decimal" aria-label="Resposta" />
+              <button id="btnCheck" title="Comprova (Enter)">Comprova (↵)</button>
+              <button class="btn-secondary" id="btnSkip" title="Omet (Fletxa dreta)">Omet (→)</button>
             </div>
-            <div id="feedback"></div>
+
+            <div id="feedback" class="feedback" aria-live="polite" style="display:none"></div>
           </div>
         </div>
 
-        <div class="panel card">
-          <h3 class="title" style="margin-top:0">Teclat numèric</h3>
-          <div class="board">
-            <button onclick="typeKey('7')">7</button>
-            <button onclick="typeKey('8')">8</button>
-            <button onclick="typeKey('9')">9</button>
-            <button onclick="typeKey('4')">4</button>
-            <button onclick="typeKey('5')">5</button>
-            <button onclick="typeKey('6')">6</button>
-            <button onclick="typeKey('1')">1</button>
-            <button onclick="typeKey('2')">2</button>
-            <button onclick="typeKey('3')">3</button>
-            <button onclick="typeKey('0')">0</button>
-            <button onclick="typeKey('-')">±</button>
-            <button onclick="typeKey('del')">⌫</button>
+        <!-- Columna teclat -->
+        <div class="panel card fade-in">
+          <h3 class="title" id="quiz-title" style="margin-top:0">Teclat numèric</h3>
+          <div class="board" role="group" aria-label="Tecles numèriques">
+            <button onclick="typeKey('7')" aria-label="7">7</button>
+            <button onclick="typeKey('8')" aria-label="8">8</button>
+            <button onclick="typeKey('9')" aria-label="9">9</button>
+
+            <button onclick="typeKey('4')" aria-label="4">4</button>
+            <button onclick="typeKey('5')" aria-label="5">5</button>
+            <button onclick="typeKey('6')" aria-label="6">6</button>
+
+            <button onclick="typeKey('1')" aria-label="1">1</button>
+            <button onclick="typeKey('2')" aria-label="2">2</button>
+            <button onclick="typeKey('3')" aria-label="3">3</button>
+
+            <button onclick="typeKey('0')" aria-label="0">0</button>
+            <button onclick="typeKey('-')" aria-label="Canvia signe">±</button>
+            <button onclick="typeKey('del')" aria-label="Esborrar">⌫</button>
           </div>
           <div style="margin-top:10px; display:flex; gap:10px; align-items:center">
-            <span class="kbd">↵</span> <span class="subtitle">comprova</span>
-            <span class="kbd">→</span> <span class="subtitle">omet</span>
+            <span class="kbd" aria-hidden="true">↵</span> <span class="subtitle">comprova</span>
+            <span class="kbd" aria-hidden="true">→</span> <span class="subtitle">omet</span>
           </div>
         </div>
       </div>
     </section>
 
     <!-- RESULTS -->
-    <section id="view-results" class="hidden">
-      <div class="panel card">
+    <section id="view-results" class="hidden" aria-labelledby="results-title">
+      <div class="panel card fade-in">
         <div class="row">
-          <h3 class="title" style="margin:0">Resultats guardats</h3>
-          <div class="tbl-actions">
+          <h3 class="title" id="results-title" style="margin:0">Resultats guardats</h3>
+          <div class="tbl-actions" role="group" aria-label="Accions de resultats">
             <button class="btn-secondary" onclick="exportCSV()">Exporta CSV</button>
             <button class="btn-ghost" onclick="clearResults()">Neteja</button>
           </div>
         </div>
+
         <div style="display:flex; gap:10px; flex-wrap:wrap; margin-bottom:10px">
-          <label class="chip">Filtra mòdul: <select id="filter-module"></select></label>
-          <label class="chip">Alumne/a: <input id="filter-student" class="input" placeholder="Tots" style="width:160px"></label>
+          <label class="chip" for="filter-module">Filtra mòdul:
+            <select id="filter-module" aria-label="Filtra per mòdul"></select>
+          </label>
+          <label class="chip" for="filter-student">Alumne/a:
+            <input id="filter-student" class="input" placeholder="Tots" style="width:160px" aria-label="Filtra per alumne/a">
+          </label>
         </div>
-        <div id="resultsTable">No hi ha dades encara.</div>
+
+        <div id="resultsTable" aria-live="polite">No hi ha dades encara.</div>
       </div>
     </section>
 
     <!-- ABOUT -->
-    <section id="view-about" class="hidden">
-      <div class="panel card">
-        <h3 class="title" style="margin-top:0">Sobre aquesta eina</h3>
+    <section id="view-about" class="hidden" aria-labelledby="about-title">
+      <div class="panel card fade-in">
+        <h3 class="title" id="about-title" style="margin-top:0">Sobre aquesta eina</h3>
         <p class="subtitle">Web single-file creada per Focus Academy. Inspirada en ThatQuiz, sense comptes ni dependències. Dades locals al navegador.</p>
         <ul>
           <li>Generador de preguntes per: Aritmètica, Fraccions, Percentatges, Equacions lineals, Geometria (àrees/perímetres/volums), Estadística i Unitats.</li>
@@ -159,6 +180,24 @@
            referrerpolicy="no-referrer" />
     </footer>
   </main>
+
   <script src="main.js" defer></script>
+  <script>
+    // Millores petites sense interferir amb el teu JS:
+    // 1) Any al footer
+    (function(){ const y = document.getElementById('year'); if (y) y.textContent = new Date().getFullYear(); })();
+
+    // 2) Accessibilitat: mostra visualment el contenidor de feedback quan hi ha text
+    (function(){
+      const fb = document.getElementById('feedback');
+      if (!fb) return;
+      const mo = new MutationObserver(() => {
+        if (fb.textContent && fb.textContent.trim().length) {
+          fb.style.display = '';
+        }
+      });
+      mo.observe(fb, { childList: true, subtree: true, characterData: true });
+    })();
+  </script>
 </body>
 </html>
