--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <option value="0">Sense límit</option><option>5</option><option>10</option><option>15</option><option>20</option>
             </select>
           </label>
-          <label class="field chip">Nivell (1–20)
+          <label class="field chip">Nivell (1–4)
             <select id="cfg-level"></select>
           </label>
         </div>
@@ -153,7 +153,7 @@
     </section>
 
     <footer class="wrap" style="display:flex; align-items:center; justify-content:space-between; gap:16px">
-      <div>Fet amb ❤️ per Focus Academy · © <span id="year"></span></div>
+      <div>Fet per Focus Academy Sant Cugat · © <span id="year"></span></div>
       <img src="https://static.wixstatic.com/media/543803_e8b22e64a34945f9ba54d4ca39fa3645~mv2.png/v1/crop/x_836,y_591,w_1877,h_1328/fill/w_642,h_454,al_c,q_85,usm_0.66_1.00_0.01,enc_avif,quality_auto/543803_e8b22e64a34945f9ba54d4ca39fa3645~mv2.png"
            alt="Logo Focus Academy" style="height:40px; width:auto; object-fit:contain"
            referrerpolicy="no-referrer" />
