--- a/teoria.html
+++ b/teoria.html
@@ -130,14 +130,14 @@
   <header>
     <div class="wrap row" style="padding:10px 0">
       <div class="brand">
-        <div class="logo" aria-hidden="true">Q</div>
+        <div class="logo" aria-hidden="true">FQ</div>
         <div>
           <div class="title" style="font-size:1.05rem">Focus Academy · Teoria</div>
           <div class="subtitle" style="font-size:.9rem">Guia ràpida de conceptes i formats</div>
         </div>
       </div>
       <nav>
-        <a class="pill" href="index.html" title="Torna a la pàgina principal">← Torna a pràctiques</a>
+        <a class="pill" href="index.html" title="Torna a la pàgina principal">Inici</a>
         <button id="printBtn" class="pill" title="Imprimeix o desa en PDF">🖨️ Imprimeix</button>
         <input id="search" class="input" placeholder="Cerca ràpida…" />
       </nav>
