--- a/index.html
+++ b/index.html
@@ -174,9 +174,10 @@
     <!-- ABOUT -->
     <section id="view-about" class="hidden">
       <div class="panel card">
-        <h3 class="title" style="margin-top:0">Sobre aquesta eina</h3>
-        <p class="subtitle">Web single-file creada per Focus Academy. Inspirada en ThatQuiz, sense comptes ni dependències. Dades locals al navegador.</p>
+        <h3 class="title" style="margin-top:0">Que és Focus Quiz?</h3>
+        <p class="subtitle">Focus Quiz és una eina creada per Focus Academy Sant Cugat perquè els estudiants practiquin matemàtiques de manera interactiva.</p>
         <ul>
+          <li>Serveix com a eina d’aprenentatge i també com a suport avaluatiu, amb exercicis autocorregibles i resultats que permeten fer un seguiment del progrés.</li>
           <li>Generador de preguntes per: Aritmètica, Fraccions, Percentatges, Equacions lineals, Geometria (àrees/perímetres/volums), Estadística, Unitats i estudi de funcions.</li>
           <li>Estadístiques dels exercicis realitzats.</li>
           <li>Temps opcional, nivell 1–4, i repàs de només les preguntes errònies.</li>
