--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2 class="title" id="cfg-title" style="margin:0">Configura el mòdul</h2>
             <p class="subtitle" id="cfg-desc"></p>
           </div>
-        <div class="controls">
+          <div class="controls">
             <button class="btn-secondary" onclick="showView('home')">← Torna</button>
             <button onclick="startFromConfig()">Comença</button>
           </div>
@@ -77,6 +77,7 @@
         <div class="panel card">
           <div class="q-header">
             <div style="display:flex; align-items:center; gap:10px">
+              <span id="qModule" class="chip">—</span>
               <span id="qLevel" class="chip">Nivell 1</span>
               <span id="timer" class="chip timer">--:--</span>
             </div>
