--- a/index.html
+++ b/index.html
@@ -193,5 +193,6 @@
     </footer>
   </main>
   <script src="main.js" defer></script>
+  <script src="lang-cat.js" defer></script>
 </body>
 </html>
