--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <p class="subtitle">Tria un mòdul per configurar-lo i començar. Tot queda guardat en aquest dispositiu (sense comptes).</p>
 
         <div class="section-title">Mòduls de matemàtiques</div>
-        <div class="grid" id="moduleGrid"></div>
+        <div id="moduleGrid"></div>
       </div>
     </section>
 
