--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button class="pill" onclick="showView('home')">Inici</button>
         <button class="pill" onclick="showView('results')">Resultats</button>
         <button class="pill" onclick="showView('about')">Sobre</button>
-        <button class="pill" onclick="window.location.href='teoria.html'">Teoria</button>
+        <button class="pill" onclick="window.location.href='teoria.html'">π</button>
         <input id="studentName" class="input" placeholder="Nom de l'alumne/a" />
       </nav>
     </div>
