--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button class="pill" onclick="showView('results')">Resultats</button>
         <button class="pill" onclick="showView('about')">Sobre</button>
         <button class="pill" onclick="window.location.href='teoria.html'">π</button>
-        <button class="pill" onclick="window.location.href='teoriacatalà.html'">à</button>
+        <button class="pill" onclick="window.location.href='teoriacatala.html'">à</button>
         <input id="studentName" class="input" placeholder="Nom de l'alumne/a" />
       </nav>
     </div>
