--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="wrap row">
       <div class="brand">
-        <div class="logo" aria-hidden="true">Q</div>
+        <div class="logo" aria-hidden="true">Focus Quiz</div>
         <h1>Focus Academy · Matemàtiques</h1>
       </div>
       <nav class="right">
