--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <button class="pill" onclick="showView('about')">Sobre</button>
         <button class="pill" onclick="window.location.href='teoria.html'">π</button>
         <button class="pill" onclick="window.location.href='teoriacatala.html'">à</button>
+        <button class="pill" onclick="window.location.href='https://focuscat.onrender.com/'">FE</button>
         <input id="studentName" class="input" placeholder="Nom de l'alumne/a" />
       </nav>
     </div>
