--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <h2 id="qText">—</h2>
             <div id="qMedia" style="margin:4px 0 2px"></div>
             <div class="answer-row">
-              <input id="answer" class="input answer" placeholder="Resposta" inputmode="decimal" />
+              <input id="answer" class="input answer" placeholder="Resposta" type="text" />
               <button id="btnCheck">Comprova (↵)</button>
               <button class="btn-secondary" id="btnSkip">Omet (→)</button>
             </div>
