--- a/index.html
+++ b/index.html
@@ -98,22 +98,10 @@
           </div>
         </div>
 
-        <div class="panel card">
-          <h3 class="title" style="margin-top:0">Teclat numèric</h3>
-          <div class="board">
-            <button onclick="typeKey('7')">7</button>
-            <button onclick="typeKey('8')">8</button>
-            <button onclick="typeKey('9')">9</button>
-            <button onclick="typeKey('4')">4</button>
-            <button onclick="typeKey('5')">5</button>
-            <button onclick="typeKey('6')">6</button>
-            <button onclick="typeKey('1')">1</button>
-            <button onclick="typeKey('2')">2</button>
-            <button onclick="typeKey('3')">3</button>
-            <button onclick="typeKey('0')">0</button>
-            <button onclick="typeKey('-')">±</button>
-            <button onclick="typeKey('del')">⌫</button>
-          </div>
+        <div id="keypad" class="panel card">
+  <!-- Aquí es pintarà dinàmicament el teclat numèric o les opcions multiple choice -->
+</div>
+
           <div style="margin-top:10px; display:flex; gap:10px; align-items:center">
             <span class="kbd">↵</span> <span class="subtitle">comprova</span>
             <span class="kbd">→</span> <span class="subtitle">omet</span>
