--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- CONFIG -->
     <section id="view-config" class="hidden">
-      <div class="panel card">
+      <div class="">
         <div class="row" style="align-items:center">
           <div>
             <h2 class="title" id="cfg-title" style="margin:0">Configura el mòdul</h2>
@@ -98,10 +98,8 @@
           </div>
         </div>
 
-        <div id="keypad" class="panel card">
-  <!-- Aquí es pintarà dinàmicament el teclat numèric o les opcions multiple choice -->
-</div>
-
+        <div class="panel card" id="keypad"></div>
+        
           <div style="margin-top:10px; display:flex; gap:10px; align-items:center">
             <span class="kbd">↵</span> <span class="subtitle">comprova</span>
             <span class="kbd">→</span> <span class="subtitle">omet</span>
