--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!-- CONFIG -->
     <section id="view-config" class="hidden">
-      <div class="">
+      <div class="panel card">
         <div class="row" style="align-items:center">
           <div>
             <h2 class="title" id="cfg-title" style="margin:0">Configura el mòdul</h2>
