--- a/index.html
+++ b/index.html
@@ -181,5 +181,6 @@
   </main>
   <script src="main.js" defer></script>
   <script src="lang-cat.js" defer></script>
+  <script src="quim.js" defer></script>
 </body>
 </html>
